welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: not found: value newArray
  var T=newArray[Color](len)
        ^