welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var len:Int=getMondeHauteur()
  var T=newArray[Color](len)
  for (i<-0 to T.length-1){
    T(i)=getCouleurSol()
  }
}